fix bubble spacing on game page

--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -30,12 +30,14 @@ div.title { height: 38px; line-height: 38px; padding: 0 10px; margin: 0 1px 0 0;
   width: 342px;
   position: relative; z-index: 9; box-shadow: 0 10px 30px rgba(0,0,0,0.2); -moz-box-shadow: 0 10px 30px rgba(0,0,0,0.2); }
 .fullscreen { float: right; position: relative; z-index: 10; }
+@media (max-width: 440px) {
+  .back-button {
+    display: none;
+  }
+}
 .back-button {
   width: 15vw;
   position: relative;
-}
-#canvas {
-  margin-top: 20px;
 }
 #back-link {
   position: absolute;
@@ -51,6 +53,33 @@ div.title { height: 38px; line-height: 38px; padding: 0 10px; margin: 0 1px 0 0;
   width: 100%;
   height: 100%;
 }
+.appearing {
+  visibility: hidden;
+}
+@media (max-width: 535px) {
+  .bubble {
+    display: none;
+  }
+}
+.one {
+  left: 85%;
+  top: 15%;
+}
+.four {
+  left: 4%;
+  width: 15vw;
+  height: 15vw;
+}
+.five {
+  top: 30%;
+}
+.six {
+  display: none;
+}
+.seven {
+  left: 80%
+}
+
 body.template {border: 1px red solid; }
 .template .template-wrap { border: 1px blue solid;}
 .template .template-wrap canvas { }
